// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableToolbar component should render 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-1"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe={true}
  >
    Some
  </Toolbar>
  <div
    className="ins-c-table__toolbar-results"
  >
    <span
      className="ins-c-table__toolbar-results-count"
    >
       
      0 Results
       
    </span>
    <span
      className="ins-c-table__toolbar-results-selected"
    >
       
      0
       Selected 
    </span>
  </div>
</Fragment>
`;

exports[`TableToolbar component should render a footer 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar ins-m-footer"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-8"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe={true}
  >
    Footer
  </Toolbar>
  <div
    className="ins-c-table__toolbar-results"
  >
    <span
      className="ins-c-table__toolbar-results-count"
    >
       
      0 Results
       
    </span>
    <span
      className="ins-c-table__toolbar-results-selected"
    >
       
      0
       Selected 
    </span>
  </div>
</Fragment>
`;

exports[`TableToolbar component should render with results and selection of 1 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-7"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe={true}
  >
    Some
  </Toolbar>
  <div
    className="ins-c-table__toolbar-results"
  >
    <span
      className="ins-c-table__toolbar-results-count"
    >
       
      1 Result
       
    </span>
    <span
      className="ins-c-table__toolbar-results-selected"
    >
       
      1
       Selected 
    </span>
  </div>
</Fragment>
`;

exports[`TableToolbar component should render with results greater than 1 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-4"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe={true}
  >
    Some
  </Toolbar>
  <div
    className="ins-c-table__toolbar-results"
  >
    <span
      className="ins-c-table__toolbar-results-count"
    >
       
      2 Results
       
    </span>
    <span
      className="ins-c-table__toolbar-results-selected"
    >
       
      0
       Selected 
    </span>
  </div>
</Fragment>
`;

exports[`TableToolbar component should render with results of 0 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-2"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe={true}
  >
    Some
  </Toolbar>
  <div
    className="ins-c-table__toolbar-results"
  >
    <span
      className="ins-c-table__toolbar-results-count"
    >
       
      0 Results
       
    </span>
    <span
      className="ins-c-table__toolbar-results-selected"
    >
       
      0
       Selected 
    </span>
  </div>
</Fragment>
`;

exports[`TableToolbar component should render with results of 1 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-3"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe={true}
  >
    Some
  </Toolbar>
  <div
    className="ins-c-table__toolbar-results"
  >
    <span
      className="ins-c-table__toolbar-results-count"
    >
       
      1 Result
       
    </span>
    <span
      className="ins-c-table__toolbar-results-selected"
    >
       
      0
       Selected 
    </span>
  </div>
</Fragment>
`;

exports[`TableToolbar component should render with selection of 0 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-5"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe={true}
  >
    Some
  </Toolbar>
  <div
    className="ins-c-table__toolbar-results"
  >
    <span
      className="ins-c-table__toolbar-results-count"
    >
       
      0 Results
       
    </span>
    <span
      className="ins-c-table__toolbar-results-selected"
    >
       
      0
       Selected 
    </span>
  </div>
</Fragment>
`;

exports[`TableToolbar component should render with selection of 1 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-6"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe={true}
  >
    Some
  </Toolbar>
  <div
    className="ins-c-table__toolbar-results"
  >
    <span
      className="ins-c-table__toolbar-results-count"
    >
       
      0 Results
       
    </span>
    <span
      className="ins-c-table__toolbar-results-selected"
    >
       
      1
       Selected 
    </span>
  </div>
</Fragment>
`;
